test/1.2/errors/T_EINC.dml
/*
  © 2021 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

method init() {
    local int i = 0;
    /// ERROR EINC
    i[7:3]++;
    /// ERROR EINC
    --i[7:3];

    local bitfields 8 {
        uint4 hi @ [7:4];
        uint4 lo @ [3:0];
    } bf = 0;
    /// ERROR EINC
    bf.hi++;

    local layout "big-endian" {
        uint16 x;
    } lo;
    lo.x = 0;
    // This works now /// ERROR EINC
    lo.x++;
}
